--- a/back/package.json
+++ b/back/package.json
@@ -12,9 +12,11 @@
         "@prisma/client": "^5.19.1",
         "@types/swagger-jsdoc": "^6.0.4",
         "axios": "^1.7.7",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.21.2",
+        "jsonwebtoken": "^9.0.2",
         "pino": "^9.3.2",
         "pino-http": "^10.3.0",
         "swagger-jsdoc": "^6.2.8",
@@ -24,8 +26,10 @@
         "zod": "^3.23.8"
     },
     "devDependencies": {
+        "@types/bcrypt": "^6.0.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^20.12.12",
         "@types/swagger-ui-express": "^4.1.8",
         "@types/uuid": "^10.0.0",
