--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,10 +2,12 @@ FROM node:lts-alpine
 
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm ci
 COPY . .
 
 RUN npx prisma generate
+
+RUN npm run build
 
 EXPOSE 3000
 CMD ["npm", "run", "start"]
