--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -7,5 +7,7 @@ RUN npm run build
 
 # Serveur Nginx pour le build
 FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
