--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "dev": "tsx watch --watch=src/**/* src/index.ts",
         "build": "tsc -p .",
-        "start": "node dist/index.js",
+        "start": "npx prisma migrate deploy && node dist/server.js",
         "prisma": "prisma"
     },
     "dependencies": {
